feat: Implement core e-commerce functionality including product management, authentication, and a comprehensive user interface.